# scooter-app

lab5_III/: CMakeLists.txt
lab5_III/lab5_II/: CMakeLists.txt  customers.csv  main.cpp  scooters.csv
lab5_III/lab5_II/Controller/: Controller.cpp  Controller.h
lab5_III/lab5_II/Domain/: Customer.cpp  Customer.h  Scooter.cpp  Scooter.h
lab5_III/lab5_II/Repository/: CustomerFileRepo.cpp  CustomerFileRepo.h  FileRepo.h  MemoryRepo.cpp  MemoryRepo.h  Repo.h  ScooterFileRepo.cpp  ScooterFileRepo.h
lab5_III/lab5_II/Tests/: tests.cpp  tests.h
lab5_III/lab5_II/UI/: UI.cpp  UI.h
